Changed issues with main page links covering most of the screen for mobile users

--- a/style.css
+++ b/style.css
@@ -67,16 +67,65 @@ nav a{
 
 /* Goes from column to row if pixels are 520 */
 @media (max-width: 480px) {
-    nav a {
-        display: flex;
-        flex-direction: column;
-        flex-wrap: wrap; /* Allow items to stack on smaller screens */  
-    }
+/* Style the navigation menu */
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+  position: relative;
+}
+
+/* Hide the links inside the navigation menu (except for logo/home) */
+.topnav #myLinks {
+  display: none;
+}
+
+/* Style navigation menu links */
+.topnav a {
+  color: rgb(0, 0, 0);
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  display: block;
+}
+
+/* Style the hamburger menu */
+.topnav a.icon {
+  background: black;
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+/* Add a grey background color on mouse-over */
+/* .topnav a:hover {
+  background-color: #ddd;
+  color: black;
+} */
+
+/* Style the active link (or home/logo) */
+.active {
+  background-color: #3050ed;
+  color: white;
+  
+} 
     .center{
-        margin-top: 400px;
-        
+        margin-top: 400px;        
     }
 }
+@media not all and (max-width: 480px) {
+    /* Apply second set of CSS rules */
+    .active {
+    background-color: #2e59ce;
+    color: white;
+    display: none;
+    } 
+    h1{
+        font-size: 1em;
+    }
+}
+
+
 
 .nav a:hover{
     background-color: rgb(38, 42, 255);
@@ -249,6 +298,7 @@ style-off:hover{
     margin: 20px;
     padding: 10px;
 }
-interest-frame{
-    
-}
+
+
+
+
